accept multi LDAP server urls + added check LDAP connection buttons

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -282,11 +282,13 @@
         "s": "Second",
         "p": "Seconds"
     },
-    "LDAP Server URL": "LDAP Server URL",
+    "LDAP Server URLs": "LDAP Server URLs",
     "Search Base": "Search Base",
+    "Testing connection": "Testing connection",
+    "Testing user": "Testing user",
     "Users search base": "Users search base",
-    "Group filter": "Group filter",
-    "Admins. group filter": "Admins. group filter",
+    "Simple user filter": "Simple user filter",
+    "Tenants admin filter": "Tenants admin filter",
     "Search filter": "Search filter",
     "Admin username (bind DN)": "Admin username (bind DN)",
     "Admin password": "Admin password",
