--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -282,11 +282,13 @@
     "s": "Seconde",
     "p": "Secondes"
   },
-  "LDAP Server URL": "URL du serveur LDAP",
+  "LDAP Server URLs": "URLs des serveurs LDAP",
   "Search Base": "Base de recherche",
   "Users search base": "Base de recherche utilisateurs",
-  "Group filter": "Filtre de groupe",
-  "Admins. group filter": "Filtre de groupe Admin.",
+  "Testing connection": "Test de connexion",
+  "Testing user": "Test avec un utilisateur",
+  "Simple user filter": "Filtre de groupe",
+  "Tenants admin filter": "Filtre de groupe Admin.",
   "Search filter": "Filtre de recherche",
   "Admin username (bind DN)": "Nom d'utilisateur admin (bind DN)",
   "Admin password": "Mot de passe admin",
