--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -781,5 +781,6 @@
   "Find LDAP member by email ...": "Trouver un utilisateur LDAP via email",
   "LDAP user found": "Utilisateur LDAP trouvé",
   "User already in team": "Utilisateur déjà dans l'équipe",
-  "User already invited": "Déjà dans l'attente de l'utilisateur"
+  "User already invited": "Déjà dans l'attente de l'utilisateur",
+  "Connect timeout": "Timeout de connexion"
 }
