--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -527,6 +527,7 @@
     "Create your account": "Create your account",
     "Reset your password": "Reset your password",
     "Connect to your account": "Connect to your account",
+    "Connect to your thrid party account": "Connect to your thrid party account",
     "Username": "Username",
     "Login": "Login",
     "Forgot your password ?": "Forgot your password ?",
@@ -778,5 +779,6 @@
     "Construction mode": "Construction mode",
     "Default mode": "Default mode",
     "Global maintenance mode enabled": "Global maintenance mode enabled",
-    "Disable maintenance": "Disable maintenance"
+    "Disable maintenance": "Disable maintenance",
+    "login.failed": "User not found or invalid credentials"
 }
