--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -780,7 +780,7 @@
     "Default mode": "Default mode",
     "Global maintenance mode enabled": "Global maintenance mode enabled",
     "Disable maintenance": "Disable maintenance",
-    "login.failed": "User not found or invalid credentials"
+    "login.failed": "User not found or invalid credentials",
     "or": "or",
     "Find LDAP member by email ...": "Find LDAP member by email ...",
     "LDAP user found": "Utilisateur LDAP trouvé",
