Some reworks about blog tabs for apis #42

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -797,5 +797,6 @@
     "team_api_post.publish": "Publish post",
     "team_api_post.title": "Title of post",
     "team_api_post.content": "Content",
-    "New Published Post": "New post published on api"
+    "New Published Post": "New post published on api",
+    "News": "News"
 }
