--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -798,5 +798,7 @@
   "team_api_post.title": "Titre de la publication",
   "team_api_post.content": "Contenu",
   "New Published Post": "Une nouvelle publication a été publiée",
-  "News": "Informations"
+  "News": "Informations",
+  "deleted": "dupprimé",
+  "Deleted API": "API supprimée"
 }
