--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -803,5 +803,33 @@
   "deleted": "dupprimé",
   "Deleted API": "API supprimée",
   "Personal": "Personel",
-  "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe."
+  "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe.",
+  "issues": "Problèmes",
+  "issues.tags": "Étiquettes",
+  "issues.no_tags": "Aucune étiquette",
+  "issues.new_tag": "Nouvelle étiquette",
+  "issues.tag_name": "Nom de l'étiquette",
+  "issues.tag_color": "Couleur de l'étiquette",
+  "issues.create_tag": "Créer l'étiquette",
+  "issues.open": "Ouvert",
+  "issues.closed": "Fermé",
+  "issues.new_issue": "Nouveau problème",
+  "issues.submit_new_issue": "Soumettre l'issue",
+  "issues.timeline.title.error": "Title is empty",
+  "issues.timeline.comment_content.error": "Le commentaire ne peut pas être vide",
+  "issues.confirm_delete": "Êtes-vous sûr de vouloir supprimer ce problème ?",
+  "issues.on_error": "Une erreur est survenue",
+  "issues.on_missing_comment_content": "Un contenu est obligatoire pour publier un commentaire",
+  "issues.opened_message": "a ouvert ce problème le",
+  "issues.comments": "commentaires",
+  "issues.actions": "Actions",
+  "issues.delete_issue": "Supprimer ce problème",
+  "issues.commented_on": "commenté(e) le",
+  "issues.update": "Mettre à jour",
+  "issues.new_comment": "Nouveau commentaire",
+  "issues.actions.close": "Fermer le problème",
+  "issues.actions.reopen": "Ré-ouvrir le problème",
+  "issues.actions.comment": "Commenter",
+  "issues.tags_of_api": "Étiquettes pour les problèmes",
+  "Edit": "Editer"
 }
