--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -803,5 +803,33 @@
     "deleted": "deleted",
     "Deleted API": "Deleted API",
     "Personal": "Personal",
-    "team.invitation": "%s, as admin of %s, invit you in his team."
+    "team.invitation": "%s, as admin of %s, invit you in his team.",
+    "issues": "Issues",
+    "issues.tags": "Tags",
+    "issues.no_tags": "No tags",
+    "issues.new_tag": "New tag",
+    "issues.tag_name": "Tag name",
+    "issues.tag_color": "Tag color",
+    "issues.create_tag": "Create Tag",
+    "issues.open": "Open",
+    "issues.closed": "Closed",
+    "issues.new_issue": "New issue",
+    "issues.submit_new_issue": "Submit new issue",
+    "issues.timeline.title.error": "Title is empty",
+    "issues.timeline.comment_content.error": "Missing content of comment",
+    "issues.confirm_delete": "Are you sure to delete this issue ?",
+    "issues.on_error": "An error occured",
+    "issues.on_missing_comment_content": "A content is mandatory to publish a new comment",
+    "issues.opened_message": "opened this issue on",
+    "issues.comments": "comments",
+    "issues.actions": "Actions",
+    "issues.delete_issue": "Delete this issue",
+    "issues.commented_on": "commented on",
+    "issues.update": "Update issue",
+    "issues.new_comment": "New comment",
+    "issues.actions.close": "Close issue",
+    "issues.actions.reopen": "Re-open issue",
+    "issues.actions.comment": "Comment",
+    "issues.tags_of_api": "Tags for issues",
+    "Edit": "Edit"
 }
