--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -804,6 +804,8 @@
   "Deleted API": "API supprimée",
   "Personal": "Personel",
   "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe.",
+  "issues.notification": "Une issue a été ouverte sur %s",
+  "issues.comment.notification": "An issue has been commented on %s",
   "issues": "Problèmes",
   "issues.tags": "Étiquettes",
   "issues.no_tags": "Aucune étiquette",
@@ -818,18 +820,25 @@
   "issues.timeline.title.error": "Title is empty",
   "issues.timeline.comment_content.error": "Le commentaire ne peut pas être vide",
   "issues.confirm_delete": "Êtes-vous sûr de vouloir supprimer ce problème ?",
+  "issues.comments.confirm_delete": "Êtes-vous sûr de vouloir supprimer ce commentaire ?",
   "issues.on_error": "Une erreur est survenue",
   "issues.on_missing_comment_content": "Un contenu est obligatoire pour publier un commentaire",
   "issues.opened_message": "a ouvert ce problème le",
   "issues.comments": "commentaires",
   "issues.actions": "Actions",
   "issues.delete_issue": "Supprimer ce problème",
-  "issues.commented_on": "commenté(e) le",
+  "issues.commented_on": "a commenté(e) le",
   "issues.update": "Mettre à jour",
   "issues.new_comment": "Nouveau commentaire",
   "issues.actions.close": "Fermer le problème",
   "issues.actions.reopen": "Ré-ouvrir le problème",
   "issues.actions.comment": "Commenter",
   "issues.tags_of_api": "Étiquettes pour les problèmes",
-  "Edit": "Editer"
+  "issues.opened_on": "ouvert le",
+  "issues.by": "par",
+  "issues.closed_on": "a été fermé le",
+  "issues.nothing_matching_filter": "Aucun problème correspondant aux filtres",
+  "Edit": "Editer",
+  "star": "Étoiler",
+  "unstar": "Supprimer l'étoile"
 }
