--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -788,17 +788,16 @@
     "User already in team": "User already in team",
     "User already invited": "User already invited",
     "Connect timeout": "Connect timeout",
-    "team_api_post.delete.confirm": "Are you sure to delete this post ?",
-    "team_api_post.saved": "Post saved",
+    "team_api_post.delete.confirm": "Are you sure to delete this news ?",
+    "team_api_post.saved": "News saved",
     "team_api_post.failed": "Something went wrong",
-    "team_api_post.new": "New Post",
-    "team_api_post.empty_posts_list": "No posts",
-    "team_api_post.load_old_posts": "Load old posts",
-    "team_api_post.save": "Save post",
-    "team_api_post.publish": "Publish post",
-    "team_api_post.title": "Title of post",
+    "team_api_post.new": "Create news",
+    "team_api_post.empty_posts_list": "No news",
+    "team_api_post.load_old_posts": "Load old news",
+    "team_api_post.publish": "Publish news",
+    "team_api_post.title": "Title of news",
     "team_api_post.content": "Content",
-    "New Published Post": "New post published on api",
+    "New Published Post": "News published on api",
     "News": "News",
     "deleted": "deleted",
     "Deleted API": "Deleted API",
