--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -806,5 +806,27 @@
     "Verification code": "Verification code",
     "2fa.message": "Two Factor Authentification is enabled. Enter a code from your 2FA App to make sure everything works.",
     "2fa.code_error": "Your code must have 6 digits",
-    "2fa.wrong_code": "Invalid verification code"
+    "2fa.wrong_code": "Invalid verification code",
+    "2fa.successfully_disabled": "2FA successfully disabled - You can now login",
+    "2fa.insert_backup_codes": "Insert your backup codes",
+    "2fa.reset_access": "Reset access",
+    "2fa.using_code": "I found my device and my app. Use the code again.",
+    "2fa.insert_code": "Insert code",
+    "2fa.verify_code": "Verify code",
+    "2fa.lost_device_message": "Lost Device or access to 2fa App ? Click here to use your backup codes.",
+    "2fa.disable_confirm_message": "Are you sure you want to disable 2FA on your profile ?",
+    "2fa.successfully_disabled_from_pr": "Two Factor Authentication disabled",
+    "2fa.copied": "Copied",
+    "2fa.backup_codes_message": "With 2FA enabled for your account, you'll need these backup codes if you ever lose your device. Without your device or a backup code, you'll have to contact a Daikoku Admin to recover your account.",
+    "2fa.advice_scan": "Open your Two Factor Authentication App (like Authy) and scan this QR code.",
+    "2fa.advice_enter_manually": "... Or enter following code manually (without entering spaces).",
+    "2fa.enter_6_digits": "Once code is registered, you'll start seeing 6-digit verification codes in the app.",
+    "2fa.enter_a_code": "Enter a code from your 2FA App to make sure everything works.",
+    "2fa.complete_registration": "Complete registration",
+    "2fa": "Two factor Authentication (2FA)",
+    "2fa.disable_action": "Disable 2FA",
+    "2fa.enable_action": "Enable 2FA",
+    "2fa.backup_codes": "Backup codes",
+    "2fa.qrcode": "Generated QRCode",
+    "2fa.confirm": "Confirm"
 }
