--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -866,5 +866,7 @@
   "issues.nothing_matching_filter": "Aucun problème correspondant aux filtres",
   "Edit": "Editer",
   "star": "Étoiler",
-  "unstar": "Supprimer l'étoile"
+  "unstar": "Supprimer l'étoile",
+  "Kafka host validation": "Validation de l'hôte Kafka",
+  "kafka.audit.hostValidation.help": "Désactiver la validation nom d'hôte du serveur à l'aide du certificat du serveur par Kafka"
 }
