send email to new user to join team

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -869,5 +869,14 @@
     "Edit": "Edit",
     "Kafka host validation": "Kafka hostname validation",
     "kafka.audit.hostValidation.help": "Disable server hostname validation using server certificate by Kafka",
-    "team_member.no_pending_members": "You haven't invited any collaborators yet"
+    "team_member.no_pending_members": "You haven't invited any collaborators yet",
+    "team_member.confirm_remove_invitation": "Are you sure to remove this invitation ?",
+    "team_member.invit_user": "Invit a collaborator",
+    "team_member.invite_user_to": "Invite a collaborator to ",
+    "team_member.send_email": "Send invitation",
+    "team_member.invitation": "Join %s",
+    "team_member.accept_invitation": "Accept",
+    "team_member.refuse_invitation": "Refuse",
+    "team_member.has_joined": "You're now in the team",
+    "team_member.missing_token": "Missing token"
 }
